Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     </section>
 
     <section class="main-content">
-      <p>Test</p>
+      <h1>
+<a id="testing" class="anchor" href="#testing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>testing</h1>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/mnshgautam/testSite">Testsite</a> is maintained by <a href="https://github.com/mnshgautam">mnshgautam</a>.</span>
