--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
-  <body background="Craftaround.com.png" style="background-repeat:no-repeat; v-align:middle; background-position: center;">
+  <body>
+    <div background="Craftaround.com.png" style="background-repeat:no-repeat; v-align:middle; background-position: center;"></div>
   </body>
 </html>
