--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <div background="Craftaround.com.png" style="background-repeat:no-repeat; v-align:middle; background-position: center;"></div>
+    <div style="background-image: url(Craftaround.com.png);"></div>
   </body>
 </html>
