--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <div style="background-image: url(Craftaround.com.png);"></div>
+    <div style="background-image: url(Craftaround.com.png); height: 400px; width: 400px;"></div>
   </body>
 </html>
