--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <div style="background-image: url(Craftaround.com.png); height: 432px; margin-left:640px; margin-top:200px"></div>
+    <div style="background-image: url(Craftaround.com.png); height: 432px; margin-left:640px; margin-top:200px ; background-repeat:no-repeat"></div>
   </body>
 </html>
